fixes and changes

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
 - mettre vrais projets
 - faire vrai tri des réalisations par date (récentes ou non)
-- changer adresse détail projet
-
-- responsive
+- cv sur serveur webinfo?
